--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -32,26 +32,29 @@ jobs:
         run: |
           mkdir -p index-management-artifacts
           cp ./build/distributions/*.zip index-management-artifacts
+          cp ./build/distributions/*.zip index-management-artifacts_zip
           cp ./build/distributions/*.deb index-management-artifacts
+          cp ./build/distributions/*.deb index-management-artifacts_deb
           cp ./build/distributions/*.rpm index-management-artifacts
+          cp ./build/distributions/*.rpm index-management-artifacts_rpm
           echo ::set-env name=TAG_VERSION::${GITHUB_REF/refs\/tags\//}
 
-      # AWS authentication
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-2
-
-      # This step uses the upload-artifact Github action: https://github.com/actions/upload-artifact
-      - name: Upload Artifacts to S3
-        run: |
-          s3_path=s3://artifacts.opendistroforelasticsearch.amazon.com/downloads
-          aws s3 cp index-management-artifacts/*.zip $s3_path/elasticsearch-plugins/opendistro-index-management/
-          aws s3 cp index-management-artifacts/*.deb $s3_path/debs/opendistro-index-management/
-          aws s3 cp index-management-artifacts/*.rpm $s3_path/rpms/opendistro-index-management/
-          aws cloudfront create-invalidation --distribution-id ${{ secrets.DISTRIBUTION_ID }} --paths '/downloads/*'
+#      # AWS authentication
+#      - name: Configure AWS Credentials
+#        uses: aws-actions/configure-aws-credentials@v1
+#        with:
+#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          aws-region: us-west-2
+#
+#      # This step uses the upload-artifact Github action: https://github.com/actions/upload-artifact
+#      - name: Upload Artifacts to S3
+#        run: |
+#          s3_path=s3://artifacts.opendistroforelasticsearch.amazon.com/downloads
+#          aws s3 cp index-management-artifacts/*.zip $s3_path/elasticsearch-plugins/opendistro-index-management/
+#          aws s3 cp index-management-artifacts/*.deb $s3_path/debs/opendistro-index-management/
+#          aws s3 cp index-management-artifacts/*.rpm $s3_path/rpms/opendistro-index-management/
+#          aws cloudfront create-invalidation --distribution-id ${{ secrets.DISTRIBUTION_ID }} --paths '/downloads/*'
 
       - name: Create Github Draft Release
         id: create_release
@@ -72,7 +75,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_name: index-management-artifacts.zip
-          asset_path: ./build/distributions/*.zip
+          asset_path: index-management-artifacts_zip
           asset_content_type: application/zip
 
       # Upload the release with .rpm as asset
@@ -83,7 +86,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_name: index-management-artifacts.rpm
-          asset_path: ./build/distributions/*.rpm
+          asset_path: index-management-artifacts_rpm
           asset_content_type: application/zip
 
       # Upload the release with .deb as asset
@@ -94,7 +97,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_name: index-management-artifacts.deb
-          asset_path: ./build/distributions/*.deb
+          asset_path: index-management-artifacts_deb
           asset_content_type: application/zip
 
       - name: Upload Workflow Artifacts
