--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -2,8 +2,8 @@ name: Release workflow
 # This workflow is triggered on creating tags to master or an opendistro release branch
 on:
   push:
-    tags:
-      - 'v*'
+    branches:
+      - "new"
 
 jobs:
   build:
@@ -50,58 +50,5 @@ jobs:
       # This step uses the upload-artifact Github action: https://github.com/actions/upload-artifact
       - name: Upload Artifacts to S3
         run: |
-          s3_path=s3://artifacts.opendistroforelasticsearch.amazon.com/downloads
-          aws s3 cp index-management-artifacts/*.zip $s3_path/elasticsearch-plugins/opendistro-index-management/
-          aws s3 cp index-management-artifacts/*.deb $s3_path/debs/opendistro-index-management/
-          aws s3 cp index-management-artifacts/*.rpm $s3_path/rpms/opendistro-index-management/
-          aws cloudfront create-invalidation --distribution-id ${{ secrets.DISTRIBUTION_ID }} --paths '/downloads/*'
-
-      - name: Create Github Draft Release
-        id: create_release
-        uses: actions/create-release@v1.0.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ env.TAG_VERSION }}
-          draft: true
-          prerelease: false
-
-      # Upload the release with .zip as asset
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_name: index-management-artifacts.zip
-          asset_path: index-management-artifacts_zip
-          asset_content_type: application/zip
-
-      # Upload the release with .rpm as asset
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_name: index-management-artifacts.rpm
-          asset_path: index-management-artifacts_rpm
-          asset_content_type: application/zip
-
-      # Upload the release with .deb as asset
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_name: index-management-artifacts.deb
-          asset_path: index-management-artifacts_deb
-          asset_content_type: application/zip
-
-      - name: Upload Workflow Artifacts
-        uses: actions/upload-artifact@v1
-        with:
-          name: index-management-plugin
-          path: index-management-artifacts
+          aws s3 cp index-management-artifacts/*.deb s3://staging.artifacts.opendistroforelasticsearch.amazon.com/repos/all-old-debs/
+ 
