--- a/build-tools/pkgbuild.gradle
+++ b/build-tools/pkgbuild.gradle
@@ -54,7 +54,7 @@ afterEvaluate {
     }
 
     buildDeb {
-        arch = 'amd64'
+        arch = 'all'
         archiveName "${packageName}-${version}.deb"
         dependsOn 'assemble'
     }
